--- a/projects/ae_onboarding_classifier/sagemaker/endpoint_tester.ipynb
+++ b/projects/ae_onboarding_classifier/sagemaker/endpoint_tester.ipynb
@@ -66,7 +66,6 @@
    "outputs": [],
    "source": [
     "predictor = RealTimePredictor(endpoint=ENDPOINT_NAME,\n",
-    "                              deserializer=tf_deserializer, \n",
     "                              serializer=tf_serializer,\n",
     "                              content_type='application/octet-stream')\n",
     "features = {'words': create_feature(transform(msg))}\n",
@@ -105,9 +104,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
