add Predict class to handle predictions locally

--- a/projects/ae_onboarding_classifier/sagemaker/model_deployer.ipynb
+++ b/projects/ae_onboarding_classifier/sagemaker/model_deployer.ipynb
@@ -11,7 +11,7 @@
     "import os\n",
     "from sagemaker.tensorflow import TensorFlow\n",
     "from sagemaker import get_execution_role\n",
-    "from utils.pre_processing import get_output_file_name\n",
+    "from utils.pre_processing import get_model_name\n",
     "\n",
     "role = get_execution_role()\n",
     "\n",
@@ -46,7 +46,7 @@
    "source": [
     "for q in range(1, 4):\n",
     "    model_name = \"grader-question-{}\".format(q)\n",
-    "    model_data = S3_BUCKET + get_output_file_name(q) + \".tar.gz\"\n",
+    "    model_data = S3_BUCKET + get_model_name(q) + \".tar.gz\"\n",
     "    deploy_model(model_name, model_data)"
    ]
   }
